tests/fixtures/invalid/string_literal_element_address_write.c
int main(void) {
    char *middle = &"cat"[1];
    middle[0] = 'u';
    return middle[0];
}
